@@ -14,6 +14,7 @@ Mantis ChangeLog
  * Fix: Improve speed of actions that trigger email sends by reducing the number of queries by 200x (20,000%). Queries when sending emails are now linear to the number of users receiving the email instead of the number of users in the system.
  * Fix: error deleting bug files fixed
  * Fix: display logical filename rather than file system filename for project documents in project document edit page.
+ * Fix #838:  Show attached images as images instead of links.
  * Fix #2944: Project files are not deleted when project is deleted.
  * Fix #2939: Confusing file names for uploaded project documents.
  * Fix #2953: View all bugs page empty (temporary fix by disabling compression when running on an IIS server).
@@ -44,6 +45,7 @@ Mantis ChangeLog
  * New config option (file_type_icons): provides mapping between file extensions and icons to be used for file types.
  * New config option (show_monitor_list_threshold): threshold needed to view the list of users monitoring a bug.
  * New config option (document_files_prefix): prefix to be used for file system names for documents uploaded to projects (eg: doc-001-myprojdoc.zip when using prefix 'doc').
+ * New config option (preview_attachments_inline_max_size): Configure the maximum size for an attachment to be viewed inline.  (needed by #838)
  * Removed config option (bugnote_include_file): Used file path directly since there is no reason to make it configurable.
  * Removed config option (bugnote_view_include_file): Used file path directly since there is no reason to make it configurable.
  * Removed config option (bugnote_add_include_file): Used file path directly since there is no reason to make it configurable.
